WIP Styling YelpCamp app

--- a/YelpCamp/v1/views/new.ejs
+++ b/YelpCamp/v1/views/new.ejs
@@ -6,4 +6,5 @@
   <input type="text" name="image" placeholder="image url">
   <button>Submit</button>
 </form>
+<a href="/campgrounds"><button type="button" style="margin-top: 1%;">Go back</button></a>
 <%- include("partials/footer") %>
