--- a/YelpCamp/v1/views/campgrounds.ejs
+++ b/YelpCamp/v1/views/campgrounds.ejs
@@ -1,14 +1,31 @@
 <%- include ("partials/header") %>
 
-<h1>This is the campgrounds page</h1>
-<a href="/campgrounds/new">Add new campground</a>
 
-<% campgrounds.forEach((campground) => { %>
-    <div>
-        <h4><%= campground.name %></h4>
-        <img src="<%= campground.image %>" alt="ejs image">
+
+
+<div class="container">
+  <header class="jumbotron">
+    <div class="container">
+      <h1>Welcome to YelpCamp!</h1>
+      <p>View our hand-picked campgrounds from all over the world...</p>
+      <p>
+        <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add new campground</a>
+      </p>
     </div>
-   
-<% }); %>
+  </header>
+
+  <div class="d-flex flex-wrap justify-center">
+    <% campgrounds.forEach((campground) => { %>
+    <div class="col-md-3 col-sm-6">
+      <div class="img-thumbnail">
+        <img class="img-fluid figure-img mt-1" src="<%= campground.image %>" />
+        <div class="figure-caption">
+          <h4><%= campground.name %></h4>
+        </div>
+      </div>
+    </div>
+    <% }); %>
+  </div>
+</div>
 
 <%- include ("partials/footer") %>
