--- a/YelpCamp/v1/views/partials/header.ejs
+++ b/YelpCamp/v1/views/partials/header.ejs
@@ -7,3 +7,22 @@
     <title>YelpCamp</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a class="navbar-brand" href="/">YelpCamp</a>
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Login <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
