--- a/YelpCamp/v1/views/new.ejs
+++ b/YelpCamp/v1/views/new.ejs
@@ -1,10 +1,22 @@
 <%- include("partials/header") %>
-<h1>Create a New Campground</h1>
+<div class="container">
+  <div class="">
+    <h1 style="text-align: center;">Create a New Campground</h1>
+    <div style="width: 30%; margin: 25px auto;">
+      <form action="/campgrounds" method="POST">
+        <div class="form-group">
+          <input class="form-control" type="text" name="name" placeholder="name" />
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="text" name="image" placeholder="image url" />
+        </div>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary btn-block">Submit</button>
+        </div>
+      </form>
+      <a href="/campgrounds"><button class="btn btn-outline-secondary" type="button" style="margin-top: 1%;">Go back</button></a>
+    </div>
+  </div>
+</div>
 
-<form action="/campgrounds" method="POST">
-  <input type="text" name="name" placeholder="name">
-  <input type="text" name="image" placeholder="image url">
-  <button>Submit</button>
-</form>
-<a href="/campgrounds"><button type="button" style="margin-top: 1%;">Go back</button></a>
 <%- include("partials/footer") %>
