--- a/YelpCamp/v10/views/campgrounds/show.ejs
+++ b/YelpCamp/v10/views/campgrounds/show.ejs
@@ -19,7 +19,7 @@
           <p><em>Submitted By <%= campground.author.username %></em></p>
           <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
           <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-          <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+          <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
             <button class="btn btn-danger">Delete</button>
           </form>
           <% } %>
@@ -38,6 +38,18 @@
             <p>
               <%= comment.text %>
             </p>
+            <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+            <a class="btn btn-sm btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"
+              >Edit</a
+            >
+            <form
+              class="delete-form"
+              action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE"
+              method="POST"
+            >
+              <input type="submit" class="btn btn-sm btn-danger" value="Delete" />
+            </form>
+            <% } %>
           </div>
         </div>
 
